New Branch - First Commit

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
                     </tr>
                 </thead>
                 <tbody id="tableBody">
-                    <tr>
-                        <td scope="col">Vorgestefddffdrn</td>
-                    </tr>
+
                 </tbody>
             </table>
             <button name="scrollForward" id="scrollForward" title="scrollForward">Forward</button>
@@ -89,8 +87,9 @@
                 </div>
             </div>
 
+            <textarea id="todoTextArea" cols="40" rows="5" name="todoTextArea" value=""></textarea>
 
-            <p class="text lineThrough">Vorgestefddffdrn</p>
+
         </div>
 
 </body>
