--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <script src="js/startup.js"></script>
 
 
-
+    <!--
     <table border="1">
 
 
         <div class="todo">
             <div class="todo-button-row">
-                <!-- https://fontawesome.com/v4.7.0/icons/ -->
+             
                 <div class="todo-button-row-button">
                     <i class="edit fa fa-edit" aria-hidden="true" job="edit"></i>
                 </div>
@@ -90,7 +90,7 @@
             <textarea id="todoTextArea" cols="40" rows="5" name="todoTextArea" value=""></textarea>
 
 
-        </div>
+        </div>-->
 
 </body>
 
