--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_matrix.css">
     <link rel="stylesheet" href="css/style_todo.css">
 
 
@@ -16,81 +17,121 @@
 
 <body>
 
-    <div class="container">
-        <div class="Header">
+    <div class="bodyContainer">
 
+
+
+
+        <div class="matrix">
+
+            <div class="backbutton">
+                <button name="scrollBack" id="scrollBack" title="scrollBack">Back</button>
+            </div>
+
+            <div id="todoColumnsDiv" class="todoColumnsDiv">
+                <!--<div id="todoColumnDiv1" class="todoColumnDiv1">
+                    <div class="todoColumnHeaderDiv">
+                        <p>Vorgestern</p>
+                    </div>
+                    <div class="todoListDiv">
+                        Todo
+                    </div>
+                    <div class="addTodoToColumnButton">
+                        <input type="text" id="addTodoTextInput" placeholder="Add To Do">
+                        <button name="addTodoToColumnButton" data-column-index="0" id="addToDoButton"
+                            title="Add">Add</button>
+                    </div>
+                </div>
+
+                <div id="todoColumnDiv2" class="todoColumnDiv2">
+                    <div class="todoColumnHeaderDiv">
+                        <p>Vorgestern</p>
+                    </div>
+                    <div class="todoListDiv">
+                        Todo
+                    </div>
+                    <div class="addTodoToColumnButton">
+                        <input type="text" id="addTodoTextInput" placeholder="Add To Do">
+                        <button name="addTodoToColumnButton" data-column-index="1" id="addToDoButton"
+                            title="Add">Add</button>
+                    </div>
+                </div>
+
+                <div id="todoColumnDiv3" class="todoColumnDiv3">
+                    <div class="todoColumnHeaderDiv">
+                        <p>Vorgestern</p>
+                    </div>
+                    <div class="todoListDiv">
+                        Todo
+                    </div>
+                    <div class="addTodoToColumnButton">
+                        <input type="text" id="addTodoTextInput" placeholder="Add To Do">
+                        <button name="addTodoToColumnButton" id="addToDoButton" data-column-index="2"
+                            title="Add">Add</button>
+                    </div>
+                </div>
+
+                <div id="todoColumnDiv4" class="todoColumnDiv4">
+                    <div class="todoColumnHeaderDiv">
+                        <p>Vorgestern</p>
+                    </div>
+                    <div class="todoListDiv">
+                        Todo
+                    </div>
+                    <div class="addTodoToColumnButton">
+                        <input type="text" id="addTodoTextInput" placeholder="Add To Do">
+                        <button name="addTodoToColumnButton" id="addToDoButton" data-column-index="3"
+                            title="Add">Add</button>
+                    </div>
+                </div>
+
+                <div id="todoColumnDiv5" class="todoColumnDiv5">
+                    <div class="todoColumnHeaderDiv">
+                        <p>Vorgestern</p>
+                    </div>
+                    <div class="todoListDiv">
+                        Todo
+                    </div>
+                    <div class="addTodoToColumnButton">
+                        <input type="text" id="addTodoTextInput" placeholder="Add To Do">
+                        <button name="addTodoToColumnButton" id="addToDoButton" data-column-index="4"
+                            title="Add">Add</button>
+                    </div>
+                </div>
+
+                <div id="todoColumnDiv6" class="todoColumnDiv6">
+                    <div class="todoColumnHeaderDiv">
+                        <p>Vorgestern</p>
+                    </div>
+                    <div class="todoListDiv">
+                        Todo
+                    </div>
+                    <div class="addTodoToColumnButton">
+                        <input type="text" id="addTodoTextInput" placeholder="Add To Do">
+                        <button name="addTodoToColumnButton" id="addToDoButton" data-column-index="5"
+                            title="Add">Add</button>
+                    </div>
+                </div>-->
+            </div>
+            <div class="forwardbutton">
+                <button name="scrollForward" id="scrollForward" title="scrollForward">Forward</button>
+            </div>
         </div>
 
-        <div class="content">
-            <button name="scrollBack" id="scrollBack" title="scrollBack">Back</button>
-            <table border="1">
 
-                <thead id="tableHead">
-                    <caption>Meine Todos</caption>
-                    <tr>
-                        <th scope="col">Vorgestern</th>
-                        <th scope="col">Gestern</th>
-                        <th scope="col">Heute</th>
-                        <th scope="col">Morgen</th>
-                        <th scope="col">Übermorgen</th>
-                        <th scope="col">Über-Übermorgen</th>
-                        <th scope="col">Über-Über-Übermorgen</th>
-                    </tr>
-                </thead>
-                <tbody id="tableBody">
 
-                </tbody>
-            </table>
-            <button name="scrollForward" id="scrollForward" title="scrollForward">Forward</button>
-        </div>
 
-        <div class="add-item">
-            <input type="text" id="addTodoTextInput" placeholder="Add To Do">
-            <button name="add" id="addToDoButton" title="Add">Add</button>
-        </div>
 
-        <div>
-            <ul id="newTodosList">
 
-            </ul>
-        </div>
     </div>
 
 
-    <script src="js/ToDo.js"></script>
+    <script src="js/Constants.js"></script>
+    <script src="js/Todo.js"></script>
+    <script src="js/TodoColumn.js"></script>
     <script src="js/matrixManager.js"></script>
     <script src="js/detailAreaManager.js"></script>
     <script src="js/startup.js"></script>
-
-
-    <!--
-    <table border="1">
-
-
-        <div class="todo">
-            <div class="todo-button-row">
-             
-                <div class="todo-button-row-button">
-                    <i class="edit fa fa-edit" aria-hidden="true" job="edit"></i>
-                </div>
-                <div class="todo-button-row-button">
-                    <i class="prio fa fa-thermometer-full" aria-hidden="true" job="change_priority"></i>
-                </div>
-                <div class="todo-button-row-button">
-                    <i class="delete fa fa-trash-o" aria-hidden="true" job="delete"></i>
-                </div>
-                <div class="todo-button-row-button">
-                    <i class="done fa fa-check" aria-hidden="true" job="set_done"></i>
-                </div>
-                <div class="todo-button-row-button">
-                    <i class="undone fa fa-close" aria-hidden="true" job="set_undone"></i>
-                </div>
-            </div>
-
-            <textarea id="todoTextArea" cols="40" rows="5" name="todoTextArea" value=""></textarea>
-
-
-        </div>-->
 
 </body>
 
